current SVN:

* Updates to build x86_64, i386, PowerPC and MIPS Linux. Not functional yet.

version 0.1.28

* Update to curl 7.47.0.
* Update to binutils 2.26.
* Update autoconf files for several libraries.
* Update to LLVM r258477.
* Added missing aarch64 compiler-rt functions: __floatditf, etc.
* Add wireless tools build to ecclinux.
* Update to LLVM r257984.
* Add less build to ecclinux.

version 0.1.27

* Add dropbear build to ecclinux.
* Incomplete integration of some builds for ecclinux.
* Add an SD card installation script.

version 0.1.26

* Create a bootable Raspberry Pi SD Card.
* Build Das U-Boot on Linux.
* Update to LLVM r257250.

version 0.1.25

* Additional changes to build Linux on the Mac. Thanks to Emmanuel Blot.
* Update to mbedtls 2.2.1.
* Some changes to build Linux on the Mac.

version 0.1.24

* Limit the number of build hosts.
* Build libraries as listed in ellcc/libecc/config/libraries.
* Interpret e.g. cc, c++, gcc, g++ as ELLCC.
* Update to LLVM r256671.
* Create a Linux build directory and scripts.
* Updates to build openssh.
* Updates to build ARMv7 Linux.
* Add header files for suckless software builds.

version 0.1.23:

* Built and booted a Raspberry Pi Linux kernel.
* Fix ARM assembly with hard float and external assembler.
* Update to nghttp2 1.6.0.
* Update to LLVM r256384.

version 0.1.22:

l Add header files to compile Toybox.

version 0.1.21:

* Update to GDB 7.10.1.
* Update to QEMU 2.5.0.
* Update to LLVM r255872.
* Import and build the libevent 2.0.22 library.
* Import and build the nanomsg 0.8-beta library.
* Update to LLVM r255244.
* Build curl with openldap support.
* Import and build the openldap 2.4.43 library.
* Build curl with metalink support.
* Import and build the libmetalink 0.1.3 library.
* Import and build the curl 7.46.0 library.
* Import and build the nghttp2 1.5.0 library.
* Import and build the libssh2 1.6.0 library.
* Import and build the c-ares 1.10.0 library.
* Microblaze fix for mbed TLS.