@@ -112,8 +112,16 @@ cd gnu
   ./build $arg1 || bailout "Build failed for gnu"
 cd ..
 
-# Now install the ELLCC tools.
+# Install LLVM components.
 ${MAKE} -j ${maxjobs} -C llvm-build$builddir install || bailout "Install failed for llvm"
+
+# Now install the LLVM tools in the appropriate bin directory.
+rm -f $bindir/clang-[0-9]*
+cp llvm-build$builddir/bin/* $bindir
+cd $bindir
+ln -s clang-[0-9]* ecc
+ln -s clang-[0-9]* ecc++
+cd - 
 
 if [ "$host" != "$build" ] ; then
   # The host system is not the build system.
