@@ -14,8 +14,9 @@ if(WIN32 OR CYGWIN)
   set(LLVM_LINK_COMPONENTS Core)
 endif()
 
-add_llvm_loadable_module( BugpointPasses
-  TestPasses.cpp
-  )
 
-add_dependencies(BugpointPasses bugpoint)
+#add_llvm_loadable_module( BugpointPasses
+#  TestPasses.cpp
+#  )
+
+#add_dependencies(BugpointPasses bugpoint)
