@@ -6,6 +6,7 @@ set(LLVM_LINK_COMPONENTS
 add_clang_library(clangDriver
   Action.cpp
   Compilation.cpp
+  CompilationInfo.cpp
   CrossWindowsToolChain.cpp
   Driver.cpp
   DriverOptions.cpp
