@@ -1,5 +1,7 @@
 current SVN:
 
+* Build lld as part of the ELLCC build.
+* Use cmake to build clang/LLVM for all targets.
 * Updates to build x86_64, i386, PowerPC and MIPS Linux. Not functional yet.
 
 version 0.1.28
